--- a/webapp.yaml
+++ b/webapp.yaml
@@ -23,9 +23,18 @@ services:
   nginx:
     image: nginx
     volumes:
-      - ${PWD}/nginx.conf:/etc/nginx/nginx.conf
+      - ${PWD}/nginx:/etc/nginx/conf.d
+      - ${PWD}/nginx/certbot/conf:/etc/letsencrypt
+      - ${PWD}/nginx/certbot/www:/var/www/certbot
     ports:
       - "80:80"
+      - "443:443"
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ${PWD}/nginx/certbot/conf:/etc/letsencrypt
+      - ${PWD}/nginx/certbot/www:/var/www/certbot
+    entrypoint: ["sleep", "12h"]
 
 volumes:
   rcontrol_db:
