--- a/webapp.yaml
+++ b/webapp.yaml
@@ -34,7 +34,8 @@ services:
     volumes:
       - ${PWD}/nginx/certbot/conf:/etc/letsencrypt
       - ${PWD}/nginx/certbot/www:/var/www/certbot
-    entrypoint: ["sleep", "12h"]
+    #entrypoint: ["sleep", "12h"]
+    entrypoint: ["/bin/sh", "-c", "trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;"]
 
 volumes:
   rcontrol_db:
