Add nginx command to reload config every 6h

--- a/webapp.yaml
+++ b/webapp.yaml
@@ -29,6 +29,7 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    command: ["/bin/sh", "-c", "while :; do sleep 6h & wait $${!}; nginx -s reload; nginx -g \"daemon off\"; done"]
   certbot:
     image: certbot/certbot
     volumes:
