--- a/webapp.yaml
+++ b/webapp.yaml
@@ -29,7 +29,8 @@ services:
     ports:
       - "80:80"
       - "443:443"
-    command: ["/bin/sh", "-c", "while :; do sleep 6h & wait $${!}; nginx -s reload; nginx -g \"daemon off\"; done"]
+    command: ["/bin/sh", "-c", "nginx ; while :; do sleep 6h & wait $${!}; nginx -s reload; done"]
+    #command: ["/bin/sh", "-c", "sleep 12h"]
   certbot:
     image: certbot/certbot
     volumes:
@@ -37,6 +38,16 @@ services:
       - ${PWD}/nginx/certbot/www:/var/www/certbot
     #entrypoint: ["sleep", "12h"]
     entrypoint: ["/bin/sh", "-c", "trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;"]
+  postfix:
+    build:
+      context: .
+      dockerfile: postfix.dockerfile
+    volumes:
+      - ${PWD}/postfix:/var/mail
+    environment:
+      - MY_DESTINATION=${MYDOMAIN}, localhost.localdomain, localhost
+    ports:
+      - "25:25"
 
 volumes:
   rcontrol_db:
