--- a/webapp.yaml
+++ b/webapp.yaml
@@ -29,7 +29,7 @@ services:
     ports:
       - "80:80"
       - "443:443"
-    command: ["/bin/sh", "-c", "nginx ; while :; do sleep 6h & wait $${!}; nginx -s reload; done"]
+    command: ["/bin/sh", "-c", "trap \"nginx -s stop; exit 0\" TERM; nginx ; while :; do sleep 6h & wait $${!}; nginx -s reload; done"]
     #command: ["/bin/sh", "-c", "sleep 12h"]
   certbot:
     image: certbot/certbot
@@ -37,7 +37,7 @@ services:
       - ${PWD}/nginx/certbot/conf:/etc/letsencrypt
       - ${PWD}/nginx/certbot/www:/var/www/certbot
     #entrypoint: ["sleep", "12h"]
-    entrypoint: ["/bin/sh", "-c", "trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;"]
+    entrypoint: ["/bin/sh", "-c", "trap \"exit 0\" TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;"]
   postfix:
     build:
       context: .
