Modify environment for watchmail.py

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ DEV_DATABASE_URI="postgresql://pl704206:phm123@db:5432/devrcontrol"
 AUTH0_DOMAIN="dev20.auth0.com"
 API_AUDIENCE="https://rcommand"
 ALGORITHMS="RS256;"
+MAIL_USER="pl"
+MAILBOX_PATH="${PWD}/postfix"
