--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.4.2
 astroid==2.4.1
 click==7.1.2
+colorama==0.4.3
 ecdsa==0.15
 Flask==1.1.2
 Flask-Migrate==2.5.3
@@ -10,10 +11,10 @@ isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
 lazy-object-proxy==1.4.3
-#Mako==1.1.2
 Mako==1.1.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
+pathtools==0.1.2
 psycopg2-binary==2.8.5
 pyasn1==0.4.8
 pylint==2.5.2
@@ -25,5 +26,6 @@ rsa==4.6
 six==1.15.0
 SQLAlchemy==1.3.17
 toml==0.10.1
+watchdog==0.10.3
 Werkzeug==1.0.1
 wrapt==1.12.1
