Add watchmail service

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ API_AUDIENCE="https://rcommand"
 ALGORITHMS="RS256;"
 MAIL_USER="pl"
 MAILBOX_PATH="${PWD}/postfix"
+PAYLOAD = "grant_type=client_credentials&client_id=mu1d1oQSQr9EkkZ9KhkIkZQc21axNZ63&client_secret=DggOB5ORvPQla2ySyqI1P6s6JmnZtcF_VBiBu_M5rtHqsMC_rSt-wRVb_JOeUn62&audience=${API_AUDIENCE}"
+USERID=1000
+GROUPID=1000
