Add userid and groupid instruction so postfix container can match host user permission to aviod permission issue

--- a/webapp.yaml
+++ b/webapp.yaml
@@ -42,6 +42,9 @@ services:
     build:
       context: .
       dockerfile: postfix.dockerfile
+      args:
+        USERID: ${USERID}
+        GROUPID: ${GROUPID}
     volumes:
       - ${PWD}/postfix:/var/mail
     environment:
